large update for refactoring graphql and adding notifications
